--- a/donate.html
+++ b/donate.html
@@ -93,10 +93,10 @@
                 <input type="email" placeholder="enter your email">
                 <select name="" id="">
                     <option value="" selected disabled>donation amount</option>
-                    <option value="$5">$5</option>
-                    <option value="$10">$10</option>
-                    <option value="$15">$15</option>
-                    <option value="$20">$20</option>
+                    <option value="5/=">5/=</option>
+                    <option value="10/=">10/=</option>
+                    <option value="15/=">15/=</option>
+                    <option value="20/=">20/=</option>
                 </select>
             </div>
 
