--- a/login.html
+++ b/login.html
@@ -90,7 +90,11 @@
                 <div class="login__field">
                     <i class="fa-sharp fa-solid fa-location-dot"></i>
 					<input type="text" class="login__input" placeholder="Place/Location">
-				</div>		
+				</div>
+                <div class="login__field">
+                    <i class="fa-sharp fa-solid fa-phone"></i>
+					<input type="int" class="login__input" placeholder="Contact No">
+				</div>				
 				<button class="button login__submit">
 					<span class="button__text">Log In Now</span>
 					<i class="button__icon fas fa-chevron-right"></i>
