--- a/recycle.html
+++ b/recycle.html
@@ -95,6 +95,7 @@
        
           </div>
         </div>
+
         <div class="card">
           <img class="card-img-top" src="imagesss/soda-can.webp" alt="Card image cap">
           <div class="card-body">
@@ -109,8 +110,6 @@
       </div>
 </div>
 <div class="container">
-
-
     <div class="card-deck">
         <div class="card">
           <img class="card-img-top" src="imagesss/devices.jpg" alt="Card image cap">
@@ -154,5 +153,43 @@
           </div>
         </div>
       </div>
+</div>
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="imagesss/plastic-bottle.webp" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Supply 350</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      
+      <h6><a href="bottle.html"><button class="recycle-button">Learn more</button></a></h6>
+      <a href="login.html"><button class="recycle-button">Recycle</button></a>
+      <h6><button class="recycle-button">Contact No: +88017292929</button></h6>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="imagesss/can.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Nike</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+   
+   <h6><a href="can.html"><button class="recycle-button">Learn more</button></a></h6>
+      <a href="login.html"><button class="recycle-button">Recycle</button></a>
+      <h6><button class="recycle-button">Contact No: +88017292929</button></h6>
+ 
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="imagesss/soda-can.webp" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Red Airmax</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+     <h6><a href="sodacan.html"><button class="recycle-button">Learn more</button></a></h6>
+      <a href="login.html"><button class="recycle-button">Recycle</button></a>
+      <h6><button class="recycle-button">Contact No: +88017292929</button></h6>
+ 
+    </div>
+  </div>
+</div>
 </div>
 <!-- recycle sdection ends -->
