--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="container-fluid ">
     <div class="row">
-        <div class="col-4"> <a href="index.html" class="homelogo"><img class="logo" src="images/logo2.png" alt="logo">Restore-eco</a>
+        <div class="col-4"> <a href="index.html" class="homelogo"><img class="logo" src="images/logo2.png" alt="logo">RestoreEco</a>
         </div>
         </div>
         <div class="col-8">
@@ -358,14 +358,14 @@
     <div class="donate-box">
         <h3>donation amount</h3>
         <div class="amount">
-            <input class="active" type="button" value="$5">
-            <input type="button" value="$10">
-            <input type="button" value="$20">
-            <input type="button" value="$25">
-            <input type="button" value="$50">
-            <input type="button" value="$100">
-            <input type="button" value="$500">
-            <input type="text" placeholder="$ other">
+            <input class="active" type="button" value="5/=">
+            <input type="button" value="10/=">
+            <input type="button" value="20/=">
+            <input type="button" value="25/=">
+            <input type="button" value="50/=">
+            <input type="button" value="100/=">
+            <input type="button" value="500/=">
+            <input type="text" placeholder="other/=">
         </div>
         <a href="donate.html" class="btn2">donate now</a>
     </div>
@@ -431,14 +431,14 @@
                         <img src="./icons/phone-2.svg" alt="">
                         <div>
                             <span>Call us:</span>
-                            <span>(+84) 123 456 789</span>
+                            <span>+88017292929**</span>
                         </div>
                     </div>
                     <div>
                         <img src="./icons/bag-2.svg" alt="">
                         <div>
                             <span>E-mail ::</span>
-                            <span>support@freshmeal.com</span>
+                            <span>support@restoreeco.com</span>
                         </div>
                     </div>
                     <div>
@@ -451,11 +451,21 @@
                 </div>
             </div>
         </div>
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206253.45012861438!2d-115.31508258571672!3d36.124918453865035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80beb782a4f57dd1%3A0x3accd5e6d5b379a3!2sLas%20Vegas%2C%20NV%2C%20USA!5e0!3m2!1sen!2sru!4v1580850940897!5m2!1sen!2sru"
-                width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
+
+
+        
+       <!-- Map Start Here -->
+	    <section class="Map">
+		<h2 class="text-center">Find us</h2>
+		<div class="heading-border"></div>
+		<div class="mapouter">
+			<div class="gmap_canvas">
+				<iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Chittagogn,%20Bangladesh&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+			</div>
+		</div>
+	</section>
+	<!-- Map End Here-->
+
     </section>
 
     <!-- footer section starts  -->
@@ -466,7 +476,7 @@
 
             <div class="box">
                 
-        <div class="col-4"> <a href="index.html" class="homelogo"><img class="logo" src="images/logo2.png" alt="logo">Restore-eco</a>
+        <div class="col-4"> <a href="index.html" class="homelogo"><img class="logo" src="images/logo2.png" alt="logo">RestoreEco</a>
         </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda possimus impedit voluptate fuga id
                     sapiente perspiciatis amet eos esse iure.</p>
